Improved wording, thanks
Co-authored-by: Ted Thibodeau Jr <tthibodeau@openlinksw.com>

--- a/index.html
+++ b/index.html
@@ -1732,12 +1732,12 @@ In a traditional secure messaging approach the security is a property of the pla
           Eventually, Samira loses her phone. To make sure no one impersonates her, she rotates the keys on all
 		of the DIDs she is using for communication. Rather than losing access to all of her existing
 		connections, Samira is able to update her service endpoints and routing capabilities to make
-		sure she is still receiving messages securely on the devices she still owns. When she gets a new
+		sure she continues to receive messages securely on the devices she still owns. When she gets a new
 		phone, she can add new keys to her DID Document to continue exchanging secure messages with her
-		connections uninterrupted. Shold Samira want to change the DIDs she’s using, for instance because
-		she’s changing DID method providers, she can send a message to her connections notifying them
-		that she’s deprecating her old DID and using a new DID with authentic digital signatures.
-		Samira is able to manage all of her secure communications across her devices, platforms
+		connections without interruption. Should Samira want to change the DIDs she’s using (for instance, because
+		she’s changing DID method providers), she can send a message to her connections notifying them
+		that she’s deprecating her old DID and providing her new DID with authentic digital signatures.
+		Samira is able to manage all of her secure communications across her devices, platforms,
 		and applications in a consistent way, thanks to the security features provided by DIDs.
         </p>
       </section>
