Improved wording, thanks
Co-authored-by: Ted Thibodeau Jr <tthibodeau@openlinksw.com>

--- a/index.html
+++ b/index.html
@@ -1758,11 +1758,11 @@ In a traditional secure messaging approach the security is a property of the pla
       <section id="messagingDistinction">
         <h4>Distinction</h4>
         <p>
-          Many decentralized identifier use cases describe the need for authenticated communication and cryptographic
-		security. This use case focuses on the reliance on phone numbers or email addresses as primary
-		identifiers for messaging services and illustrates how DIDs can be the backbone of a resilient
+          Many DID use cases describe the need for authenticated communication and cryptographic
+		security. This use case focuses on today's reliance on phone numbers or email addresses as primary
+		identifiers for messaging services, and illustrates how DIDs can be the backbone of a resilient
 		message-based architecture for the internet which is asynchronous, not mediated by third parties, and
-		empowers everyday users to utilize cryptographic identifiers for both basic messaging and higher-level communications.
+		empowering of everyday use of cryptographic identifiers for both basic messaging and higher-level communications.
         </p>
       </section>
     <p class="reqList"><span class="reqListbefore">Requirements:</span>
