Improved wording, thanks
Co-authored-by: Ted Thibodeau Jr <tthibodeau@openlinksw.com>

--- a/index.html
+++ b/index.html
@@ -1745,8 +1745,8 @@ In a traditional secure messaging approach the security is a property of the pla
       <section id="messagingChallenges">
         <h4>Challenges</h4>
         <p>
-          Samira’s use of a DID-based communication system comes with a number of challenges related to user
-		experience. This includes management of different communication contexts and context-switching, as
+          Samira's use of a DID-based communication system comes with a number of user experience challenges.
+		These include the management of her different communication contexts and switching between them, as
 		well as the automation of connection management with things like key rotation, updating service
 		endpoints, and routing via Agents. Users should not be exposed to the details of such coordination,
 		but should be able to interact with, modify, and audit the process as needed. It’s likely that
