Thanks again Ted.
Co-authored-by: Ted Thibodeau Jr <tthibodeau@openlinksw.com>

--- a/index.html
+++ b/index.html
@@ -1669,19 +1669,23 @@ to safely communicate with friends and family in a limited, chat-style
 context.
         </p>
         <p>
-In a traditional secure messaging approach the security is a property of the platform; if a user changes
-		platforms, either temporarily or permanently, they get their security a different way, tied to a
-		different login and different terms of service. DIDs take security out of the hands of the
-		context owner, i.e., an application or service provider, and put it in the hands of the DID
-		controller, who can choose the contexts in which they want to communicate and when. This makes
-		security decentralized and portable, instead of having the security of an interaction tied to
-		the protocol, transport, or application used to facilitate it. This feature allows people
-		to easily switch communication contexts without losing any security guarantees, and provides
-		a resilient backbone for all internet communications. Moving away from traditional identifiers
-		such as phone numbers and email addresses can help to break down the siloed ecosystems that
-		prevent data portability and make it difficult to more broadly incorporate secure communication 
-		technology in applications and services. Current approaches to secure communication
-		often have drawbacks such as the following:
+In a traditional secure messaging approach, the security is a property 
+of the platform; if a user changes platforms, either temporarily or 
+permanently, they get their security a different way, tied to a different 
+login and different terms of service. DIDs take security out of the hands 
+of the context owner, i.e., an application or service provider, and put 
+it in the hands of the DID controller, who can choose the contexts in 
+which they want to communicate and when. This makes security decentralized 
+and portable, instead of having the security of an interaction tied to the 
+protocol, transport, or application used to facilitate it. This feature 
+allows people to easily switch communication contexts without losing any 
+security guarantees, and provides a resilient backbone for all internet 
+communications. Moving away from traditional identifiers, such as phone 
+numbers and email addresses, can help to break down the siloed ecosystems 
+that prevent data portability and make it difficult to more broadly 
+incorporate secure communication technology in applications and services. 
+Current approaches to secure communication often have drawbacks such as 
+the following:
         </p>
         <ul>
           <li>reliance on commonly used identifiers which are not directly under user control</li>
