--- a/index.html
+++ b/index.html
@@ -1694,14 +1694,18 @@ the following:
           <li>siloed and non-interoperable security architectures tied to a single domain</li>
         </ul>
         <p>
-          DIDs help to solve this issue by enabling a style of communication which is truly peer-to-peer and
-		message-based. Message-based systems decouple the relationship between producers of messages
-		and consumers of messages, creating an abstraction that puts the two on equal footing and allows
-		for many different kinds of devices with differing requirements to interface in a flexible
-		and technology-neutral way. DIDs allow people to simultaneously use the same identifier for
-		both traditional communications and newer transactions that require a higher level of cryptographic security,
-		as well as allowing them to switch contexts without losing any security guarantees. These decentralized identifiers are not
-		rented or borrowed from centralized providers but are instead directly under user control.
+DIDs help to solve this issue by enabling a style of communication which
+is truly peer-to-peer and message-based. Message-based systems decouple
+the relationship between producers of messages and consumers of messages,
+creating an abstraction that puts the two on equal footing and allows for
+many different kinds of devices with differing requirements to interface
+in a flexible and technology-neutral way. DIDs allow people to
+simultaneously use the same identifier for both traditional communications
+and newer transactions that require a higher level of cryptographic
+security, as well as allowing them to switch contexts without losing any
+security guarantees. These decentralized identifiers are not rented or
+borrowed from centralized providers but are instead directly under user
+control.
         </p>
       </section>
       <section id="messagingDescription">
