--- a/index.html
+++ b/index.html
@@ -1711,16 +1711,20 @@ control.
       <section id="messagingDescription">
         <h4>Description</h4>
         <p>
-          Samira is a humanitarian aid worker in Khartoum who wants to create connections with new people she
-		meets. She has a smartphone but doesn’t have any internet access in remote areas that she visits
-		in her line of work. Since she can’t use the internet, most of her preferred methods of communication
-		are unavailable. When she meets a new person she wishes to communicate with, she establishes a
-		direct secure connection between her device and theirs by having them scan a QR code to pass on her
-		DID and start sharing messages secured by the keys referenced in her DID Document, which is served from
-		her device. She can maintain these secure connections whether she has access to the internet or not.
-		Whenever Samira is working on a new campaign or wants to raise awareness about issues affecting her
-		local region, she is able to securely communicate with all relevant parties, regardless of
-		the device, platform, or network infrastructure they are using.
+Samira is a humanitarian aid worker in Khartoum who wants to create
+connections with new people she meets. She has a smartphone but doesn’t
+have any internet access in remote areas that she visits in her line of
+work. Since she can’t use the internet, most of her preferred methods of
+communication are unavailable. When she meets a new person she wishes to
+communicate with, she establishes a direct secure connection between her
+device and theirs by having them scan a QR code to pass on her DID and
+start sharing messages secured by the keys referenced in her DID Document,
+which is served from her device. She can maintain these secure connections
+whether she has access to the internet or not. Whenever Samira is working
+on a new campaign or wants to raise awareness about issues affecting her
+local region, she is able to securely communicate with all relevant
+parties, regardless of the device, platform, or network infrastructure
+they are using.
         </p>
         <p>
           At one point, Samira sees a friend of hers, Ahmed, who’s part of a local organization campaigning against unfair
