--- a/index.html
+++ b/index.html
@@ -1727,18 +1727,22 @@ parties, regardless of the device, platform, or network infrastructure
 they are using.
         </p>
         <p>
-          At one point, Samira sees a friend of hers, Ahmed, who’s part of a local organization campaigning against unfair
-		labor practices in local agriculture. Samira wants to support the efforts of this group and get
-		involved, but she worries that publicly allying with the farm workers will negatively affect her
-		ability to act as a neutral party in labor negotiations. By creating a unique DID
-		for herself in the group at very little cost, she can engage in multi-party secure communication
-		with all of the members of Ahmed’s organization. Messages are secured via mutual authentication
-		between Samira and each of the other members. Using these connections, Samira is able to have private
-		and confidential communications with the other members at any time, without fear of censorship or
-		surveillance. Members of the organization are able to have confidence that they’re talking to
-		Samira, and she can verify who she is communicating with. Samira can use the same identifier and
-		connection with the group to share credentials that prove she’s a humanitarian worker and attest
-		to her history.
+At one point, Samira sees a friend of hers, Ahmed, who’s part of a
+local organization campaigning against unfair labor practices in local
+agriculture. Samira wants to support the efforts of this group and get
+involved, but she worries that publicly allying with the farm workers
+will negatively affect her ability to act as a neutral party in labor
+negotiations. By creating a unique DID for herself in the group at very
+little cost, she can engage in multi-party secure communication with
+all of the members of Ahmed’s organization. Messages are secured via
+mutual authentication between Samira and each of the other members.
+Using these connections, Samira is able to have private and confidential
+communications with the other members at any time, without fear of
+censorship or surveillance. Members of the organization are able to have
+confidence that they’re talking to Samira, and she can verify who she is
+communicating with. Samira can use the same identifier and connection
+with the group to share credentials that prove she’s a humanitarian
+worker and attest to her history.
         </p>
         <p>
           Eventually, Samira loses her phone. To make sure no one impersonates her, she rotates the keys on all
