--- a/index.html
+++ b/index.html
@@ -1688,10 +1688,21 @@ Current approaches to secure communication often have drawbacks such as
 the following:
         </p>
         <ul>
-          <li>reliance on commonly used identifiers which are not directly under user control</li>
-          <li>use of a central intermediary or centralized components to facilitate interactions</li>
-          <li>requirement that one or more parties have a highly available web server</li>
-          <li>siloed and non-interoperable security architectures tied to a single domain</li>
+          <li>
+reliance on commonly used identifiers which are not directly under 
+user control
+          </li>
+          <li>
+use of a central intermediary or centralized components to facilitate 
+interactions
+          </li>
+          <li>
+requirement that one or more parties have a highly available web server
+          </li>
+          <li>
+siloed and non-interoperable security architectures tied to a single 
+domain
+          </li>
         </ul>
         <p>
 DIDs help to solve this issue by enabling a style of communication which
