--- a/index.html
+++ b/index.html
@@ -1776,14 +1776,17 @@ the security features provided by DIDs.
       <section id="messagingChallenges">
         <h4>Challenges</h4>
         <p>
-          Samira's use of a DID-based communication system comes with a number of user experience challenges.
-		These include the management of her different communication contexts and switching between them, as
-		well as the automation of connection management with things like key rotation, updating service
-		endpoints, and routing via Agents. Users should not be exposed to the details of such coordination,
-		but should be able to interact with, modify, and audit the process as needed. It’s likely that
-		users will be interacting with secure messaging protocols via a number of different interfaces &amp;
-		devices and for a variety of different purposes, though the logic and experience should be
-		coherent and consistent across different platforms.
+Samira's use of a DID-based communication system comes with a number of
+user experience challenges. These include the management of her different
+communication contexts and switching between them, as well as the
+automation of connection management with things like key rotation,
+updating service endpoints, and routing via Agents. Users should not be
+exposed to the details of such coordination, but should be able to
+interact with, modify, and audit the process as needed. It’s likely that
+users will be interacting with secure messaging protocols via a number
+of different interfaces &amp; devices and for a variety of different
+purposes, though the logic and experience should be coherent and
+consistent across different platforms.
         </p>
       </section>
       <section id="messagingDistinction">
