--- a/index.html
+++ b/index.html
@@ -1792,11 +1792,13 @@ consistent across different platforms.
       <section id="messagingDistinction">
         <h4>Distinction</h4>
         <p>
-          Many DID use cases describe the need for authenticated communication and cryptographic
-		security. This use case focuses on today's reliance on phone numbers or email addresses as primary
-		identifiers for messaging services, and illustrates how DIDs can be the backbone of a resilient
-		message-based architecture for the internet which is asynchronous, not mediated by third parties, and
-		empowering of everyday use of cryptographic identifiers for both basic messaging and higher-level communications.
+Many DID use cases describe the need for authenticated communication and
+cryptographic security. This use case focuses on today's reliance on phone
+numbers or email addresses as primary identifiers for messaging services,
+and illustrates how DIDs can be the backbone of a resilient message-based
+architecture for the internet which is asynchronous, not mediated by third
+parties, and empowering of everyday use of cryptographic identifiers for
+both basic messaging and higher-level communications.
         </p>
       </section>
     <p class="reqList"><span class="reqListbefore">Requirements:</span>
