--- a/index.html
+++ b/index.html
@@ -975,7 +975,7 @@ cryptographically-verifiable.
 	      
         <section id="correlation">
           <h3>Correlation-controlled Services</h3>
-        <pCary is frustrated by the seemingly ubiquitous systems of privatized surveillance that monitor her actions in an
+        <p>Cary is frustrated by the seemingly ubiquitous systems of privatized surveillance that monitor her actions in an
      attempt to improve their convenience. She was one the first adopters of anti-cookie features and anti-adware software 
      and avoids "Sign-in with (some platform)". Unfortunately, this also means all she doesn't get the benefits offered by 
      many of today's online services including the ability to cut the airport security line or shop by using her face at the 
