--- a/index.html
+++ b/index.html
@@ -1732,7 +1732,7 @@ Samira is a humanitarian aid worker in Khartoum who wants to create connections 
 	to act as a neutral party in labor negotiations. By creating a unique DID for herself in the group at very 
 	little cost, she can engage in online multi-party secure communication with all of the members of Ahmed’s 
 	organization. Messages are secured via mutual authentication between Samira and each of the other members. 
-	Using these connections, and using either direct peer to peer connections or online services that both Samir 
+	Using these connections, and using either direct peer to peer connections or online services that both Samira
 	and Ahmed trust not to have any ‘backdoors’,  they are able to have private and confidential communications 
 	with the other members at any time, without fear of censorship. Members of the organization are able to have 
 	confidence that they’re talking to Samira, and she can verify who she is communicating with. Samira can use 
