Minor tweaks from Nader - thanks

--- a/index.html
+++ b/index.html
@@ -1743,10 +1743,10 @@ Samira is a humanitarian aid worker in Khartoum who wants to create connections 
 	to update her online service endpoints and routing capabilities to make sure she continues to receive messages 
 	securely on the devices she still owns. When she gets a new phone, she can add new keys to her DID Document to 
 	continue exchanging secure messages online with her connections without interruption. Keys shared through direct, 
-	offline connections need to be updated one by one. Should Samira want to change the DIDs she’s using (for instance, 
+	offline connections need to be updated individually by Samira to ensure continued communication. Should Samira want to change the DIDs she’s using (for instance, 
 	because she’s changing DID method providers), she can send a message to her connections notifying them that she’s 
-	deprecating her old DID and providing her new DID with authentic digital signatures. Again, for offline 
-	communication, this must be done one by one but it means that Samira is able to manage all of her secure communications
+	deprecating her old DID and providing her new DID with authentic digital signatures. Again, for entirely offline 
+	connections, this must be done one by one but it means that Samira is able to manage all of her secure communications
 	across her devices, platforms, and applications in a consistent way, thanks to the security features provided by DIDs.</p>
       </section>
 
