--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@ cryptographically-verifiable.
 
       <section id="uc">
         <h2>Use Cases</h2>
-	      <p>We present use cases in two formats: short use cases are in this section and extended, 'focal' use cases, 
+	      <p>We present use cases in two formats: short use cases are in this section and extended use cases, 
 		      that provide more detail, are presented in <a href="#focalUseCases"></a>. The diagram below provides 
 		      a visual guide to the different domains where Decentralized Identity is seen as important to people
 and links to the use cases within each domain.</p>
