Applying Ted's improvements
Thanks @TallTed

--- a/index.html
+++ b/index.html
@@ -633,9 +633,9 @@ cryptographically-verifiable.
 
       <section id="uc">
         <h2>Use Cases</h2>
-	      <p>We present use cases in two formats: short use cases are in this section and extended use cases, 
-		      that provide more detail, are presented in <a href="#focalUseCases"></a>. The diagram below provides 
-		      a visual guide to the different domains where Decentralized Identity is seen as important to people
+	      <p>We present use cases in two formats: short use cases in this section; and extended use cases, 
+		      providing more detail, in <a href="#focalUseCases"></a>. The diagram below provides 
+		      a visual guide to different domains where Decentralized Identity is seen as important to people
 and links to the use cases within each domain.</p>
 
 <figure id="domainMapFig">
