--- a/index.html
+++ b/index.html
@@ -961,7 +961,8 @@ and links to the use cases within each domain.</p>
         Authentication and Trust Services regulation
         (<a href="https://en.wikipedia.org/wiki/EIDAS">eIDAS</a>), which standardizes
         attributes and trust services in all E.U. member states.</p>
-	    <p>With her <abbr title="European Self-Sovereign Identity Framework">ESSIF</abbr> identity, Eva can apply to the Spanish university. The university
+	    <p>With her <abbr title="European Self-Sovereign Identity Framework">ESSIF</abbr> 
+	    identity, Eva can apply to the Spanish university. The university
         in turn issues further digital credentials to Eva's wallet, such as a student
         record number, or &mdash; after successful completion of the program &mdash; a digital diploma.
         In her future life, Eva can continue to enrich and use her ESSIF identity in many
