--- a/index.html
+++ b/index.html
@@ -968,7 +968,8 @@ and links to the use cases within each domain.</p>
         In her future life, Eva can continue to enrich and use her ESSIF identity in many
         ways, for example when applying for a job at a company in Finland, for registering
         her own business in Romania, for opening a bank account, or for applying for E.U.
-        grants. Since her <abbr title="European Self-Sovereign Identity Framework">ESSIF</abbr> identity includes credentials from <abbr title="Electronic IDentification,
+        grants. Since her <abbr title="European Self-Sovereign Identity Framework">ESSIF</abbr> 
+        identity includes credentials from <abbr title="Electronic IDentification,
 		Authentication and Trust Services">eIDAS</abbr>-compliant public
         authorities, it is suitable for use cases requiring the highest levels of
         assurance, while still providing the benefits of a decentralized identity
