Fix 404 link on main page
Seems the repository `master` branch does not exist, corrected by substituting with `main`

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         // extend the bibliography entries
         localBiblio: didwg.localBiblio,
 
-        github: {"repoURL": "https://github.com/w3c/did-use-cases", "branch": "master"},
+        github: {"repoURL": "https://github.com/w3c/did-use-cases", "branch": "main"},
         includePermalinks: false,
 
         // if there a publicly available Editor's Draft, this is the link
